# friend

./: README.md  demo.sh  pyproject.toml
beacon/: .clang-format  .clang-tidy  CMakeLists.txt  main.c
command/: app.py  pyproject.toml
gui/: main.py  pyproject.toml
