[project]
name = "friend"
version = "0.1.0"
description = "A friendly command and control framework - if not friend, why friend shaped?"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Friend Team", email = "friends@friend.dev"}
]
keywords = ["c2", "command-control", "remote-administration", "security", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "textual>=0.81.0",
    "httpx>=0.27.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.scripts]
friend-server = "friend.server:main"
friend-gui = "friend.gui:main"
friend-demo = "friend.demo:main"

[project.urls]
Homepage = "https://github.com/friend-team/friend"
Repository = "https://github.com/friend-team/friend"
Issues = "https://github.com/friend-team/friend/issues"
Documentation = "https://github.com/friend-team/friend#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/friend"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true